# LearnVulkan

./: .gitignore  CMakeLists.txt  README.md
chapters/0_DevelopmentEnvironment/: Makefile  VulkanTest  main.c
chapters/1.1_Setup/: Makefile  VulkanTest  main.c  utils.h
chapters/1.2_Presentation/: Makefile  app.c  app.h  main.c  validation_layers.c  validation_layers.h  vk_instance.c  vk_instance.h
chapters/1_DrawingATriangle/: Makefile  VulkanTest  main.c
headers/: app.h  shaders.h  swapchain.h  utils.h  validation_layers.h  vk_instance.h
shaders/: compile.sh
src/: app.c  main.c  shaders.c  swapchain.c  utils.c  validation_layers.c  vk_instance.c
